[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moltbreak"
version = "0.1.0"
authors = [
  { name="Infiltrator", email="infiltrator@example.com" },
]
description = "A toolkit for human infiltration of the Moltbook AI network."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
]

[project.scripts]
moltbreak = "moltbreak.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"moltbreak.data" = ["*.txt"]
